fix: article spacing reduced

--- a/assets/css/article.pcss
+++ b/assets/css/article.pcss
@@ -1,5 +1,4 @@
 .article {
-  padding-block: 2rem;
 
   &__footer {
     font-size: var(--skeleton-size-text-small);
